part 2/2.10/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devopscourse
  name: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      volumes:
        - name: shared-todo
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo-backend
          image: artomulkahainen/projectv1.3-backend:3
          volumeMounts:
            - name: shared-todo
              mountPath: /tmp/images
