part 2/2.10/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devopscourse
  name: todo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: artomulkahainen/projectv1.3-frontend:1
